Use a virtual thread for a session events loop